--- a/ProniaProject/ProniaProject/Views/Shop/Details.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shop/Details.cshtml
@@ -1,4 +1,6 @@
-﻿    <!-- Begin Main Content Area  -->
+﻿
+
+    <!-- Begin Main Content Area  -->
 <main class="main-content">
     <div class="breadcrumb-area breadcrumb-height"
          data-bg-image="~/assets/images/breadcrumb/bg/1-1-1919x388.jpg">
@@ -25,63 +27,29 @@
                     <div class="single-product-img">
                         <div class="swiper-container single-product-slider">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/1-1-570x633.jpg"
-                                       class="single-img gallery-popup">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-1-570x633.jpg"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/1-2-570x633.jpg"
-                                       class="single-img gallery-popup">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-2-570x633.jpg"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/1-3-570x633.jpg"
-                                       class="single-img gallery-popup">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-3-570x633.jpg"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="~/assets/images/website-images/1-4-570x633.jpg"
-                                       class="single-img gallery-popup">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-4-570x633.jpg"
-                                             alt="Product Image" />
-                                    </a>
-                                </div>
+                                @foreach(ProductImage productImage in Model.Product.Images)
+                                {
+                                    <div class="swiper-slide"> 
+                                        <a href="~/assets/images/website-images/@productImage.Image" class="single-img gallery-popup">       
+                                            <img class="img-full" src="~/assets/images/website-images/@productImage.Image" alt="Product Image" />   
+                                            </a>
+                                    </div>
+                                }
+
                             </div>
                         </div>
                         <div class="thumbs-arrow-holder">
                             <div class="swiper-container single-product-thumbs">
                                 <div class="swiper-wrapper">
-                                    <a href="#" class="swiper-slide">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-1-570x633.jpg"
-                                             alt="Product Thumnail" />
-                                    </a>
-                                    <a href="#" class="swiper-slide">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-2-570x633.jpg"
-                                             alt="Product Thumnail" />
-                                    </a>
-                                    <a href="#" class="swiper-slide">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-3-570x633.jpg"
-                                             alt="Product Thumnail" />
-                                    </a>
-                                    <a href="#" class="swiper-slide">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/1-4-570x633.jpg"
-                                             alt="Product Thumnail" />
-                                    </a>
+                                    @foreach(ProductImage productImage in Model.Product.Images)
+                                    {
+                                        <a href="#" class="swiper-slide">
+                                            <img class="img-full"
+                                                 src="~/assets/images/website-images/@productImage.Image"
+                                                 alt="Product Thumnail" />
+                                        </a>
+                                    }
+
                                 </div>
                                 <!-- Add Arrows -->
                                 <div class="thumbs-button-wrap d-none d-md-block">
@@ -98,9 +66,9 @@
                 </div>
                 <div class="col-lg-6 pt-5 pt-lg-0">
                     <div class="single-product-content">
-                        <h2 class="title">American Marigold</h2>
+                        <h2 class="title">@Model.Product.Name</h2>
                         <div class="price-box">
-                            <span class="new-price">$23.45</span>
+                            <span class="new-price">$@Model.Product.Price</span>
                         </div>
                         <div class="rating-box-wrap">
                             <div class="rating-box">
@@ -205,18 +173,16 @@
                             <span class="title">SKU:</span>
                             <ul>
                                 <li>
-                                    <a href="#">Ch-256xl</a>
+                                    <a href="#">@Model.Product.SKU</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="product-category">
-                            <span class="title">Categories :</span>
+                            <span class="title">Category: </span>
                             <ul>
+                              
                                 <li>
-                                    <a href="#">Office,</a>
-                                </li>
-                                <li>
-                                    <a href="#">Home</a>
+                                    <a href="#">@Model.Product.Category.Name</a>
                                 </li>
                             </ul>
                         </div>
@@ -358,23 +324,7 @@
                              aria-labelledby="description-tab">
                             <div class="product-description-body">
                                 <p class="short-desc mb-0">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing
-                                    elit, sed do eiusmod tempor incidid ut labore et dolore
-                                    magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea
-                                    commodo consequat. Duis aute irure dolor in
-                                    reprehenderit in voluptate velit esse cillum dolore eu
-                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                    non proident, sunt in culpa qui officia deserunt mollit
-                                    anim id est laborum. Sed ut perspiciatis unde omnis iste
-                                    natus error sit voluptatem accusantium doloremque
-                                    laudantium, totam rem aperiam, eaque ipsa quae ab illo
-                                    inventore veritatis et quasi architecto beatae vitae
-                                    dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                                    voluptas sit aspernatur aut odit aut fugit, sed quia
-                                    consequuntur magni dolores eos qui ratione voluptatem
-                                    sequi nesciunt. Neque porro quisquam est, qui dolorem
-                                    ipsum quia dolor sit amet,
+                                    @Model.Product.Description
                                 </p>
                             </div>
                         </div>
