--- a/ProniaProject/ProniaProject/Views/Shop/Index.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shop/Index.cshtml
@@ -272,7 +272,7 @@
                                         </div>
                                         <div class="product-content">
                                             <a class="product-name"
-                                               href="single-product-variable.html">American Marigold</a>
+                                               href="single-product-variable.html"></a>
                                             <div class="price-box pb-1">
                                                 <span class="new-price">$23.45</span>
                                             </div>
