--- a/ProniaProject/ProniaProject/Views/Home/Index.cshtml
+++ b/ProniaProject/ProniaProject/Views/Home/Index.cshtml
@@ -149,7 +149,7 @@
                                 <div class="col-xl-3 col-md-4 col-sm-6">
                                     <div class="product-item">
                                         <div class="product-img">
-                                            <a href="shop.html">
+                                            <a href="Shop/Details/@product.Id">
                                                 <img class="primary-img"
                                                      src="~/assets/images/website-images//@product.Images.FirstOrDefault(pi=>pi.IsPrime == true).Image"
                                                      alt="Product Images" />
@@ -198,7 +198,7 @@
                                             </div>
                                         </div>
                                         <div class="product-content">
-                                            <a class="product-name" href="shop.html">@product.Name</a>
+                                            <a class="product-name" href="Shop/Details/@product.Id">@product.Name</a>
                                             <div class="price-box pb-1">
                                                 <span class="new-price">$@product.Price</span>
                                             </div>
