--- a/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
@@ -1243,6 +1243,6 @@
         <script src="~/assets/js/plugins/jquery.counterup.js"></script>
 
         <!--Main JS (Common Activation Codes)-->
-        <script src="assets/js/main.js"></script>
+        <script src="~/assets/js/main.js"></script>
 </body>
 </html>
