--- a/ProniaProject/ProniaProject/Views/_ViewImports.cshtml
+++ b/ProniaProject/ProniaProject/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using ProniaProject.ViewModels
 @using ProniaProject.Models
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AuthoringTagHelpers
