--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Index.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Index.cshtml
@@ -7,7 +7,8 @@
     <div class="col-lg-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">      <a asp-controller="Category" asp-action="Create" class="card-title">Create Category</a></h4>
+                <h4 class="card-title">     
+                    <a asp-controller="Category" asp-action="Create" class="card-title">Create Category</a></h4>
                 <a class="btn btn-success">Create Slider</a>
 
                 <div class="table-responsive">
