--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Index.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Index.cshtml
@@ -8,24 +8,24 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">     
-                    <a asp-controller="Category" asp-action="Create" class="card-title">Create Category</a></h4>
-                <a class="btn btn-success">Create Slider</a>
-
+                    
+                <a asp-controller="Slider" asp-action="Create" class="btn btn-success">Create Slider</a>
+                </h4>
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th>
-
+                                    No
                                 </th>
                                 <th>
                                     Product
                                 </th>
                                 <th>
-                                    Count
+                                   title
                                 </th>
                                 <th>
-
+                                 count
                                 </th>
 
                             </tr>
