--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Create.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Slider
+﻿﻿
+@model Slider
 
 <div class="row">
     <div class="col-12 grid-margin stretch-card">
@@ -6,53 +7,37 @@
             <div class="card-body">
                 <h4 class="card-title">Create Slider</h4>
 
-
-                <form asp-action="Create" asp-controller="Category" method="post" class="forms-sample">
+                <form class="forms-sample" method="post" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label for="exampleInputName1">Title</label>
-                        <input name="name" asp-for="Title" class="form-control" placeholder="Title" />
+                        <label asp-for="Photo">Photo</label>
+                        <input asp-for="Photo" class="form-control" placeholder="Photo">
+                        <span asp-validation-for="Photo" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="Title" class="text-danger"></span>
-
-     
-
-
-             
                     <div class="form-group">
-                        <label asp-for="Subtitle">Subtitle</label>
-                        <input name="Subtitle" asp-for="Subtitle" class="form-control" placeholder="Subtitle" />
+                        <label asp-for="Title">Title</label>
+                        <input asp-for="Title" class="form-control" placeholder="Title">
+                        <span asp-validation-for="Title" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="Subtitle" class="text-danger"></span>
-
-   
-
-
-
+                    <div class="form-group">
+                        <label asp-for="Subtitle">SubTitle</label>
+                        <input asp-for="Subtitle" class="form-control" placeholder="SubTitle">
+                        <span asp-validation-for="Subtitle" class="text-danger"></span>
+                    </div>
                     <div class="form-group">
                         <label asp-for="Order">Order</label>
-                        <input name="Order" asp-for="Order" class="form-control" placeholder="Order" />
+                        <input asp-for="Order" class="form-control" placeholder="Order">
+                        <span asp-validation-for="Order" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="Order" class="text-danger"></span>
-
-
-                    <div class="form-group">
-                        <label asp-for="Image">Image</label>
-                        <input name="Image" asp-for="Image" class="form-control" placeholder="Image" />
-                    </div>
-                    <span asp-validation-for="Image" class="text-danger"></span>
-            
-
 
                     <div class="form-group">
                         <label asp-for="Desc">Description</label>
-                        <input name="Image" asp-for="Desc" class="form-control" placeholder="Desc" />
+                        <textarea asp-for="Desc" class="form-control" placeholder="Description"></textarea>
+                        <span asp-validation-for="Desc" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="Desc" class="text-danger"></span>
 
+                    <button type="submit" class="btn btn-primary me-2">Submit</button>
+                    <button class="btn btn-light">Cancel</button>
                 </form>
-
-                <button type="submit" class="btn btn-primary me-2">Submit</button>
-                <button type="button" class="btn btn-light">Cancel</button>
             </div>
         </div>
     </div>
