--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Update.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Update.cshtml
@@ -1,12 +1,16 @@
-﻿@model CreateSliderVM
+﻿@model UpdateSliderVM
 
 <div class="row">
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Create Slider</h4>
+                <h4 class="card-title">Update Slider</h4>
 
                 <form class="forms-sample" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <img src="~/assets/images/website-images/@Model.Image" alt="Alternate Text" />
+
+                    </div>
                     <div class="form-group">
                         <label asp-for="Photo">Photo</label>
                         <input asp-for="Photo" class="form-control" accept="image/*" placeholder="Photo">
@@ -29,9 +33,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="Description">Description</label>
-                        <textarea asp-for="Description" class="form-control" placeholder="Description"></textarea>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <label asp-for="Desc">Description</label>
+                        <textarea asp-for="Desc" class="form-control" placeholder="Description"></textarea>
+                        <span asp-validation-for="Desc" class="text-danger"></span>
                     </div>
 
                     <button type="submit" class="btn btn-primary me-2">Submit</button>
