--- a/ProniaProject/ProniaProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using ProniaProject.Models
 @using ProniaProject.ViewModels
+@using ProniaProject.Areas.Admin.ViewModels
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
