--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Index.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <h4 class="card-title">
 
-                    <a asp-controller="Slider" asp-action="Create" class="btn btn-success">Create Product</a>
+                    <a asp-controller="product" asp-action="Create" class="btn btn-success">Create Product</a>
                 </h4>
                 <div class="table-responsive">
                     <table class="table table-striped">
@@ -59,7 +59,7 @@
                                     </td>
                                     <td>
                                         <a asp-action="update" asp-route-id="@product.Id" class="btn btn-warning"><i class="mdi mdi-grease-pencil"></i></a>
-                                        <a asp-action=delete class="btn btn-danger" asp-route-id="@product.Id"><i class="mdi mdi-delete"></i></a>
+                                        <a asp-action="delete" class="btn btn-danger" asp-route-id="@product.Id"><i class="mdi mdi-delete"></i></a>
                                         <a asp-action=update class="btn btn-primary"><i class="mdi mdi-information"></i></a>
                                     </td>
 
