--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Index.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Slider/Index.cshtml
@@ -51,7 +51,7 @@
                                     <td>
                                         <a asp-action="update" asp-route-id="@slider.Id" class="btn btn-warning"><i class="mdi mdi-grease-pencil"></i></a>
                                         <a asp-action=delete class="btn btn-danger" asp-route-id="@slider.Id"><i class="mdi mdi-delete"></i></a>
-                                        <a asp-action=update class="btn btn-primary"><i class="mdi mdi-information"></i></a>
+                                        <a asp-action="details" class="btn btn-primary"><i class="mdi mdi-information"></i></a>
                                     </td>
 
                                 </tr>
