--- a/ProniaProject/ProniaProject/Views/Home/Index.cshtml
+++ b/ProniaProject/ProniaProject/Views/Home/Index.cshtml
@@ -151,10 +151,10 @@
                                         <div class="product-img">
                                             <a href="Shop/Details/@product.Id">
                                                 <img class="primary-img"
-                                                     src="~/assets/images/website-images//@product.Images.FirstOrDefault(pi=>pi.IsPrime == true).Image"
+                                                     src="~/assets/images/website-images//@product.Images.FirstOrDefault(pi=>pi.IsPrime == true)?.Image"
                                                      alt="Product Images" />
                                                 <img class="secondary-img"
-                                                     src="~/assets/images/website-images//@product.Images.FirstOrDefault(pi=>pi.IsPrime == false).Image"
+                                                     src="~/assets/images/website-images//@product.Images.FirstOrDefault(pi=>pi.IsPrime == false)?.Image"
                                                      alt="Product Images" />
                                             </a>
                                             <div class="product-add-action">
