--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Create.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Create.cshtml
@@ -8,6 +8,16 @@
 
                 <form class="forms-sample" method="post" enctype="multipart/form-data">
                     <div class="form-group">
+                        <label asp-for="MainPhoto">Main Photo</label>
+                        <input asp-for="MainPhoto" class="form-control" accept="image/*">
+                        <span asp-validation-for="MainPhoto" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="HoverPhoto">Secondary Photo</label>
+                        <input asp-for="HoverPhoto" class="form-control" accept="image/*">
+                        <span asp-validation-for="HoverPhoto" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
                         <label asp-for="Price">Price</label>
                         <input asp-for="Price" class="form-control" placeholder="Price">
                         <span asp-validation-for="Price" class="text-danger"></span>
