--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Create.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Create.cshtml
@@ -50,6 +50,12 @@
                         </select>
                         <span asp-validation-for="TagIds" class="text-danger"></span>
                     </div>
+                    <div class="form-group">
+                        <label asp-for="ColorIds">Colors</label>
+                        <select multiple="multiple" asp-for="ColorIds" class="form-control" asp-items="@(new SelectList(Model.Colors, nameof(Color.Id), nameof(Color.Name)))">
+                        </select>
+                        <span asp-validation-for="ColorIds" class="text-danger"></span>
+                    </div>
 
                     <button type="submit" class="btn btn-primary me-2">Submit</button>
                     <button type="button" class="btn btn-light">Cancel</button>
