--- a/ProniaProject/ProniaProject/Views/Shop/Details.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shop/Details.cshtml
@@ -87,10 +87,10 @@
                         <div class="selector-wrap color-option">
                             <span class="selector-title border-bottom-0">Color</span>
                             <select class="nice-select wide border-bottom-0 rounded-0">
-                                @foreach(ColorProduct colorProduct in Model.Product.ColorProducts)
-                                {
-                                    <option value="@colorProduct.Color.Name">@colorProduct.Color.Name</option>
-                                }
+                            @*      @foreach(ColorProduct colorProduct in Model.Product.ColorProducts)
+                                 {
+                                     <option value="@colorProduct.Color.Name">@colorProduct.Color.Name</option>
+                                 } *@
                           @*       <option value="blue">Blue</option>
                                 <option value="green">Green</option>
                                 <option value="red">Red</option> *@
