--- a/ProniaProject/ProniaProject/Views/Shop/Details.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shop/Details.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DetailVM
 
     <!-- Begin Main Content Area  -->
 <main class="main-content">
@@ -86,22 +86,26 @@
                         </div>
                         <div class="selector-wrap color-option">
                             <span class="selector-title border-bottom-0">Color</span>
+                            <select class="nice-select wide rounded-0">
+                         
                             
-                                 @foreach(ColorProduct colorProduct in Model.Product.ColorProducts)
+                                  @foreach(ColorProduct colorProduct in Model.Product.ColorProducts)
                                   {
-                                      <a href="#">@colorProduct.Color.Name</a>
+                                <option value="@colorProduct.Color.Name">@colorProduct.Color.Name</option>
                                   } 
-                              @*      <option value="blue">Blue</option>
-                                  <option value="green">Green</option>
-                                  <option value="red">Red</option>  *@
-                            
+                      
+
+                            </select>
                         </div>
                         <div class="selector-wrap size-option">
                             <span class="selector-title">Size</span>
                             <select class="nice-select wide rounded-0">
-                                <option value="medium">Medium Size & Poot</option>
-                                <option value="large">Large Size With Poot</option>
-                                <option value="small">Small Size With Poot</option>
+                                @foreach(ProductSize productSize in Model.Product.ProductSizes)
+                                {
+                                    <option value="@productSize.Size.Name">@productSize.Size.Name</option>
+                                    
+                                }
+
                             </select>
                         </div>
                         <p class="short-desc">
