--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Create.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Create.cshtml
@@ -18,6 +18,11 @@
                         <span asp-validation-for="HoverPhoto" class="text-danger"></span>
                     </div>
                     <div class="form-group">
+                        <label asp-for="AdditionalPhotos">Additional Photo</label>
+                        <input asp-for="AdditionalPhotos" multiple="multiple" class="form-control" accept="image/*">
+                        <span asp-validation-for="AdditionalPhotos" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
                         <label asp-for="Price">Price</label>
                         <input asp-for="Price" class="form-control" placeholder="Price">
                         <span asp-validation-for="Price" class="text-danger"></span>
