--- a/ProniaProject/ProniaProject/Views/Account/Login.cshtml
+++ b/ProniaProject/ProniaProject/Views/Account/Login.cshtml
@@ -6,12 +6,12 @@
             <div class="row h-100">
                 <div class="col-lg-12">
                     <div class="breadcrumb-item">
-                        <h2 class="breadcrumb-heading"> Register Page</h2>
+                        <h2 class="breadcrumb-heading"> Login Page</h2>
                         <ul>
                             <li>
                                 <a href="index.html">Home</a>
                             </li>
-                            <li>Register</li>
+                            <li>Login</li>
                         </ul>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
     <div class="col-lg-6 pt-5 pt-lg-0 m-auto">
         <form method="post">
             <div class="login-form">
-                <h4 class="login-title">Register</h4>
+                <h4 class="login-title">Login</h4>
                 <div class="row">
                     <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
