basket bug fixed

--- a/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
@@ -987,6 +987,7 @@
                             }
 
               </ul>
+                    </div>
                         @if (basketItems.Count != 0)
                         {
                             <div class="minicart-item_total">
@@ -1005,6 +1006,10 @@
                                 
                             </div>
                         }
+        
+          </div>
+           </div>
+
         <div class="global-overlay"></div>
       </header>
       <!-- Main Header Area End Here -->
