--- a/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
@@ -963,7 +963,7 @@
                             {
                                 total += item.SubTotal;
                                 <li class="minicart-product">
-                                    <a class="product-item_remove" href="#">
+                                    <a class="product-item_remove" >
                                         <i class="pe-7s-close"
                                            data-tippy="Remove"
                                            data-tippy-inertia="true"
