--- a/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
@@ -1002,7 +1002,7 @@
                         else
                         {
                             <div class="minicart-item_total">
-                                <span>Your Cart is empty <a asp-action="index" asp-controller="shop">Shop Now</a> </span>
+                                <span>Your Cart is empty <a asp-action="index" asp-controller="home">Shop Now</a> </span>
                                 
                             </div>
                         }
