--- a/ProniaProject/ProniaProject/Views/Basket/Checkout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Basket/Checkout.cshtml
@@ -26,7 +26,7 @@
 
             <div class="row">
                 <div class="col-lg-6 col-12">
-                    <form method="post" action="javascript:void(0)">
+                    <form method="post" asp-action="checkout">
                         <div class="checkbox-form">
                             <h3>Billing Details</h3>
                             <div class="row">
