--- a/ProniaProject/ProniaProject/Views/Basket/Index.cshtml
+++ b/ProniaProject/ProniaProject/Views/Basket/Index.cshtml
@@ -26,79 +26,91 @@
                 <div class="col-12">
                     <form action="javascript:void(0)">
                         <div class="table-content table-responsive">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th class="product_remove">remove</th>
-                                        <th class="product-thumbnail">images</th>
-                                        <th class="cart-product-name">Product</th>
-                                        <th class="product-price">Unit Price</th>
-                                        <th class="product-quantity">Quantity</th>
-                                        <th class="product-subtotal">Total</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach(BasketItemVM item in Model)
-                                    {
-                                        total += item.SubTotal;
-
+                            @if (Model.Count != 0)
+                            {
+                                <table class="table">
+                                    <thead>
                                         <tr>
-                                            <td class="product_remove">
-                                                <a asp-action="RemoveItemFromBasket" asp-route-id="@item.Id">
-                                                    <i class="pe-7s-close"
-                                                       data-tippy="Remove"
-                                                       data-tippy-inertia="true"
-                                                       data-tippy-animation="shift-away"
-                                                       data-tippy-delay="50"
-                                                       data-tippy-arrow="true"
-                                                       data-tippy-theme="sharpborder"></i>
-                                                </a>
-                                            </td>
-                                            <td class="product-thumbnail">
-                                                <a href="#">
-                                                    <img style="width:120px;height:120px;" src="~/assets/images/website-images/@item.Image"
-                                                         alt="Cart Thumbnail" />
-                                                </a>
-                                            </td>
-                                            <td class="product-name">
-                                                <a asp-action="detail" asp-controller="shop" asp-route-id="@item.Id">@item.Name</a>
-                                            </td>
-                                            <td class="product-price">
-                                                <span class="amount">$@item.Price</span>
-                                            </td>
-                                            <td class="quantity">
-                                                <div class="cart-plus-minus">
-                                                    <input class="cart-plus-minus-box"
-                                                           value="@item.Count"
-                                                           type="text" />
-                                                    <div class="dec qtybutton">
-                                                        <form asp-action="DecraseItemQuantity" asp-route-id="@item.Id" method="post">
-                                                            <button style="opacity:0;z-index:6;height:20px;width:20px;">
-                                                                <i class="fa fa-minus">
-
-                                                                </i>
-                                                            </button>
-                                                        </form>
-                                                    </div>
-                                                    <div class="inc qtybutton">
-                                                        <form asp-action="IncreaseItemQuantity" asp-route-id="@item.Id" method="post">
-                                                            <button style=" opacity:0;z-index:6; height:20px;width:20px;">
-                                                            <i class="fa fa-plus">
-
-                                                            </i>
-                                                      </button>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td class="product-subtotal">
-                                                <span class="amount">$@item.SubTotal</span>
-                                            </td>
+                                            <th class="product_remove">remove</th>
+                                            <th class="product-thumbnail">images</th>
+                                            <th class="cart-product-name">Product</th>
+                                            <th class="product-price">Unit Price</th>
+                                            <th class="product-quantity">Quantity</th>
+                                            <th class="product-subtotal">Total</th>
                                         </tr>
-                                    }
+                                    </thead>
+                                    <tbody>
+                                        @foreach (BasketItemVM item in Model)
+                                        {
+                                            total += item.SubTotal;
 
-                                </tbody>
-                            </table>
+                                            <tr>
+                                                <td class="product_remove">
+                                                    <a asp-action="RemoveItemFromBasket" asp-route-id="@item.Id">
+                                                        <i class="pe-7s-close"
+                                                           data-tippy="Remove"
+                                                           data-tippy-inertia="true"
+                                                           data-tippy-animation="shift-away"
+                                                           data-tippy-delay="50"
+                                                           data-tippy-arrow="true"
+                                                           data-tippy-theme="sharpborder"></i>
+                                                    </a>
+                                                </td>
+                                                <td class="product-thumbnail">
+                                                    <a href="#">
+                                                        <img style="width:120px;height:120px;" src="~/assets/images/website-images/@item.Image"
+                                                             alt="Cart Thumbnail" />
+                                                    </a>
+                                                </td>
+                                                <td class="product-name">
+                                                    <a asp-action="detail" asp-controller="shop" asp-route-id="@item.Id">@item.Name</a>
+                                                </td>
+                                                <td class="product-price">
+                                                    <span class="amount">$@item.Price</span>
+                                                </td>
+                                                <td class="quantity">
+                                                    <div class="cart-plus-minus">
+                                                        <input class="cart-plus-minus-box"
+                                                               value="@item.Count"
+                                                               type="text" />
+                                                        <div class="dec qtybutton">
+                                                            <form asp-action="DecraseItemQuantity" asp-route-id="@item.Id" method="post">
+                                                                <button style="opacity:0;z-index:6;height:20px;width:20px;">
+                                                                    <i class="fa fa-minus">
+
+                                                                    </i>
+                                                                </button>
+                                                            </form>
+                                                        </div>
+                                                        <div class="inc qtybutton">
+                                                            <form asp-action="IncreaseItemQuantity" asp-route-id="@item.Id" method="post">
+                                                                <button style=" opacity:0;z-index:6; height:20px;width:20px;">
+                                                                    <i class="fa fa-plus">
+
+                                                                    </i>
+                                                                </button>
+                                                            </form>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td class="product-subtotal">
+                                                    <span class="amount">$@item.SubTotal</span>
+                                                </td>
+                                            </tr>
+                                        }
+
+                                    </tbody>
+                                </table>
+                            }
+                            else
+                            {
+                                   <div class="d-flex justify-content-center">
+                                    <div>
+                                        <h2 class="breadcrumb-heading">Your basket is empty</h2>
+                                        <a asp-action="index" asp-controller="">Shop Now</a>
+                                    </div>
+                                   </div>
+                            }
                         </div>
                         <div class="row">
                             <div class="col-12">
@@ -132,7 +144,7 @@
                                         
                                         <li>Total <span>@total</span></li>
                                     </ul>
-                                    <a href="#">Proceed to checkout</a>
+                                    <a asp-action="checkout" asp-controller="basket">Proceed to checkout</a>
                                 </div>
                             </div>
                         </div>
