--- a/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
@@ -313,7 +313,7 @@
                                 <a href="compare.html">Compare</a>
                               </li>
                               <li>
-                                <a href="checkout.html">Checkout</a>
+                                <a asp-action="checkout" asp-controller="basket">Checkout</a>
                               </li>
                             </ul>
                           </li>
