--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Index.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model List<GetProductAdminVM>
+﻿@model PaginatedVM<GetProductAdminVM>
 @{
-    int count = 0;
+    int count = (Model.CurrentPage-1)*5;
 }
 <div class="row">
 
@@ -39,7 +39,7 @@
                         </thead>
                         <tbody>
 
-                            @foreach (GetProductAdminVM product in Model)
+                            @foreach (GetProductAdminVM product in Model.ItemVMs)
                             {
                                 count++;
                                 <tr>
@@ -68,6 +68,28 @@
                             }
                         </tbody>
                     </table>
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item @(Model.CurrentPage<=1?"disabled":"")">
+                                <a class="page-link" asp-action="index" asp-route-page="@(Model.CurrentPage-1)" aria-label="Previous">
+                                   
+                                   Previous
+                                </a>
+                            </li>
+
+                            @for(int i = 1; i <= Model.TotalPage; i++)
+                            {
+                                <li class="page-item @(Model.CurrentPage==i?"disabled":"")"><a class="page-link" asp-action="index" asp-route-page="@i">@i</a></li>
+                            }
+
+
+                            <li class="page-item @(Model.TotalPage == Model.CurrentPage ? "disabled" : "")">
+                                <a class="page-link" asp-action="index" asp-route-page="@(Model.CurrentPage + 1)" aria-label="Next">
+                                    Next
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
