searchj and filter added

--- a/ProniaProject/ProniaProject/Views/_ViewImports.cshtml
+++ b/ProniaProject/ProniaProject/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ProniaProject.ViewModels
 @using ProniaProject.Models
+@using ProniaProject.Utils.Enums;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
