--- a/ProniaProject/ProniaProject/Views/Home/Index.cshtml
+++ b/ProniaProject/ProniaProject/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <div class="swiper-container main-slider swiper-arrow with-bg_white">
         <div class="swiper-wrapper">
            
-            @foreach(var slider in Model.Sliders)
+            @foreach(Slider slider in Model.Sliders)
             {
                 <div class="swiper-slide animation-style-01">
                     <div class="slide-inner style-1 bg-height"
